--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,6 +23,7 @@ yarn-debug.log*
 yarn-error.log*
 
 .env
-/public/uploads
-!/public/uploads/whoami.txt
-!/public/profil/whoami.txt
+!/public/uploads/posts/whoami.txt
+!/public/uploads/profil/whoami.txt
+/public/uploads/posts/*
+/public/uploads/profil/*
